# find-words

./: Cargo.toml  README.md
benches/: find_words_benchmark.rs
src/: lib.rs  test_read_from_file.txt
tests/: find_words.rs
